@@ -47,7 +47,8 @@ namespace Orthanc
   {
     ImageExtractionMode_Preview,
     ImageExtractionMode_UInt8,
-    ImageExtractionMode_UInt16
+    ImageExtractionMode_UInt16,
+    ImageExtractionMode_Int16
   };
 
   enum DicomRootLevel
